STAFF EVALUATION APP

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,17 @@
 </head>
 <body>
 
+<table class="table-hover"> </table>
+<div id="main-container" class="container-fluid">
+  <div class="row">
+    <div class="col-xs-3">
+      <h3>Staff Evaluation App</h3>
+    </div>
+    <div class="col-xs-9">
 <%= yield %>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
