--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,12 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Statuses</h1>
+<h1>Student Details</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Content</th>
+      <th></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,9 +15,9 @@
       <tr>
         <td><%= status.name %></td>
         <td><%= status.content %></td>
-        <td><%= link_to 'Show', status %></td>
-        <td><%= link_to 'Edit', edit_status_path(status) %></td>
-        <td><%= link_to 'Destroy', status, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', status , class:'btn btn-primary btn xs'%></td>
+        <td><%= link_to 'Edit', edit_status_path(status), class:'btn btn-info btn xs' %></td>
+        <td><%= link_to 'Destroy', status, method: :delete, data: { confirm: 'Are you sure?' },class:'btn btn-danger' %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +25,4 @@
 
 <br>
 
-<%= link_to 'New Status', new_status_path %>
+<%= link_to 'New Status', new_status_path, class:'btn btn-success'%>
